--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -7,7 +7,7 @@
   <parent>
         <groupId>com.idyria.osi</groupId>
         <artifactId>superpom-scala</artifactId>
-        <version>2.10.1.r7</version>
+        <version>2.10.1.r10</version>
   </parent>
 
   <!-- Repositories to find OSI packages -->
@@ -80,6 +80,11 @@
       <dependency>
           <groupId>com.idyria.osi.ooxoo</groupId>
           <artifactId>ooxoo-core</artifactId>
+          <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>com.idyria.osi.tea</groupId>
+          <artifactId>tea</artifactId>
           <version>3.0.0-SNAPSHOT</version>
       </dependency>
   </dependencies>
