--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -9,7 +9,23 @@
         <artifactId>superpom-scala</artifactId>
         <version>2.10.1.r17</version>
   </parent>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ooxoo-plugin</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate-sources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
   <!-- Repositories to find OSI packages -->
   <!-- ############################################## -->
   <pluginRepositories>
