--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -7,7 +7,7 @@
   <parent>
         <groupId>com.idyria.osi</groupId>
         <artifactId>superpom-scala</artifactId>
-        <version>2.10.1.r17</version>
+        <version>2.10.1.r18</version>
   </parent>
   <build>
     <plugins>
@@ -17,15 +17,25 @@
         <version>3.0.0-SNAPSHOT</version>
         <executions>
           <execution>
-            <phase>generate-sources</phase>
+            <phase>compile</phase>
             <goals>
               <goal>generate-sources</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <configuration>
+              <useZincServer>true</useZincServer>
+              <addZincArgs>-no-color</addZincArgs>
+            </configuration>
+      </plugin>
     </plugins>
   </build>
+
+
   <!-- Repositories to find OSI packages -->
   <!-- ############################################## -->
   <pluginRepositories>
