--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -17,7 +17,7 @@
         <version>3.0.0-SNAPSHOT</version>
         <executions>
           <execution>
-            <phase>compile</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>generate-sources</goal>
             </goals>
