--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -1,128 +1,140 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.idyria.osi.wsb</groupId>
-  <artifactId>wsb-core</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
-  <name>WSB Core</name>
-  <parent>
-        <groupId>com.idyria.osi</groupId>
-        <artifactId>superpom-scala</artifactId>
-        <version>2.10.2.r2</version>
-  </parent>  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-ooxoo-plugin</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>generate-sources</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-            <artifactId>scala-maven-plugin</artifactId>
-            <configuration>
-              <addZincArgs>-no-color</addZincArgs>
-            </configuration>
-            <executions>
-              <execution>
-                <id>add-source</id>
-                <phase>generate-sources</phase>
-                <goals>
-                  <goal>add-source</goal>
-                </goals>
-                <configuration>
-                  <sourceDir>${basedir}/src/examples/scala</sourceDir>
-                </configuration>
-              </execution>
-            </executions>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.idyria.osi.wsb</groupId>
+	<artifactId>wsb-core</artifactId>
+	<version>3.0.0-SNAPSHOT</version>
+	<name>WSB Core</name>
+	<parent>
+		<groupId>com.idyria.osi</groupId>
+		<artifactId>superpom-scala</artifactId>
+		<version>2.10.3.r2</version>
+	</parent>
+
+	<!-- SCM -->
+	<!-- ### -->
+	<scm>
+		<connection>scm:git:git://bitbucket.org/osi/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:git@bitbucket.org:osi/${project.artifactId}.git</developerConnection>
+		<url>http://bitbucket.org/osi/${project.artifactId}.git</url>
+		<tag>HEAD</tag>
+	</scm>
 
 
-  <!-- Repositories to find OSI packages -->
-  <!-- ############################################## -->
-  <pluginRepositories>
-      <pluginRepository>
-          <id>sonatype</id>
-          <name>Sonatype OSS Snapshots Repository</name>
-          <url>http://oss.sonatype.org/content/groups/public</url>
-      </pluginRepository>
-      <!-- For old snapshots, please use groupId `com.jnaerator` and the
-          following repo -->
-      <pluginRepository>
-          <id>nativelibs4java-repo</id>
-          <url>http://nativelibs4java.sourceforge.net/maven</url>
-      </pluginRepository>
-      <pluginRepository>
-          <snapshots>
-              <enabled>false</enabled>
-          </snapshots>
-          <id>idyria.central</id>
-          <name>plugins-release</name>
-          <url>http://www.idyria.com/access/osi/artifactory/libs-release</url>
-      </pluginRepository>
-      <pluginRepository>
-          <snapshots>
-              <enabled>true</enabled>
-          </snapshots>
-          <id>idyria.snapshots</id>
-          <name>plugins-snapshot</name>
-          <url>http://www.idyria.com/access/osi/artifactory/libs-snapshot</url>
-      </pluginRepository>
-  </pluginRepositories>
-  <repositories>
-      <repository>
-          <id>sonatype</id>
-          <name>Sonatype OSS Snapshots Repository</name>
-          <url>http://oss.sonatype.org/content/groups/public</url>
-      </repository>
-      <!-- For old snapshots, please use groupId `com.jnaerator` and the
-          following repo -->
-      <repository>
-          <id>nativelibs4java-repo</id>
-          <url>http://nativelibs4java.sourceforge.net/maven</url>
-      </repository>
-      <repository>
-          <snapshots>
-                  <enabled>false</enabled>
-          </snapshots>
-          <id>idyria.central</id>
-          <name>libs-release</name>
-          <url>http://www.idyria.com/access/osi/artifactory/libs-release</url>
-      </repository>
-      <repository>
-              <snapshots>
-                      <enabled>true</enabled>
-              </snapshots>
-              <id>idyria.snapshots</id>
-              <name>libs-snapshot</name>
-              <url>http://www.idyria.com/access/osi/artifactory/libs-snapshot</url>
-      </repository>
-  </repositories>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ooxoo-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>generate-sources</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<configuration>
+					<addZincArgs>-no-color</addZincArgs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sourceDir>${basedir}/src/examples/scala</sourceDir>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-  <dependencies>
-      <dependency>
-          <groupId>com.idyria.osi.aib</groupId>
-          <artifactId>aib-core</artifactId>
-          <version>3.0.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-          <groupId>com.idyria.osi.ooxoo</groupId>
-          <artifactId>ooxoo-core</artifactId>
-          <version>3.0.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-          <groupId>com.idyria.osi.tea</groupId>
-          <artifactId>tea</artifactId>
-          <version>3.0.0-SNAPSHOT</version>
-      </dependency>
-  </dependencies>
+
+	<!-- Repositories to find OSI packages -->
+	<!-- ############################################## -->
+	<pluginRepositories>
+		<pluginRepository>
+			<id>sonatype</id>
+			<name>Sonatype OSS Snapshots Repository</name>
+			<url>http://oss.sonatype.org/content/groups/public</url>
+		</pluginRepository>
+		<!-- For old snapshots, please use groupId `com.jnaerator` and the following 
+			repo -->
+		<pluginRepository>
+			<id>nativelibs4java-repo</id>
+			<url>http://nativelibs4java.sourceforge.net/maven</url>
+		</pluginRepository>
+		<pluginRepository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>idyria.central</id>
+			<name>plugins-release</name>
+			<url>http://www.idyria.com/access/osi/artifactory/libs-release</url>
+		</pluginRepository>
+		<pluginRepository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>idyria.snapshots</id>
+			<name>plugins-snapshot</name>
+			<url>http://www.idyria.com/access/osi/artifactory/libs-snapshot</url>
+		</pluginRepository>
+	</pluginRepositories>
+	<repositories>
+		<repository>
+			<id>sonatype</id>
+			<name>Sonatype OSS Snapshots Repository</name>
+			<url>http://oss.sonatype.org/content/groups/public</url>
+		</repository>
+		<!-- For old snapshots, please use groupId `com.jnaerator` and the following 
+			repo -->
+		<repository>
+			<id>nativelibs4java-repo</id>
+			<url>http://nativelibs4java.sourceforge.net/maven</url>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>idyria.central</id>
+			<name>libs-release</name>
+			<url>http://www.idyria.com/access/osi/artifactory/libs-release</url>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>idyria.snapshots</id>
+			<name>libs-snapshot</name>
+			<url>http://www.idyria.com/access/osi/artifactory/libs-snapshot</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.idyria.osi.aib</groupId>
+			<artifactId>aib-core</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.idyria.osi.ooxoo</groupId>
+			<artifactId>ooxoo-core</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.idyria.osi.tea</groupId>
+			<artifactId>tea</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+	</dependencies>
 </project>
