--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -55,6 +55,17 @@
 					</execution>
 				</executions>
 			</plugin>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4</version>
+          <dependencies>
+              <dependency>
+                  <groupId>org.apache.maven.scm</groupId>
+                  <artifactId>maven-scm-provider-gitexe</artifactId>
+                  <version>1.8.1</version>
+              </dependency>
+          </dependencies>
+      </plugin>
 		</plugins>
 	</build>
 
