--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.idyria.osi.wsb</groupId>
 	<artifactId>wsb-core</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0-RC1</version>
 	<name>WSB Core</name>
 	<parent>
 		<groupId>com.idyria.osi</groupId>
@@ -55,17 +54,6 @@
 					</execution>
 				</executions>
 			</plugin>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.4</version>
-          <dependencies>
-              <dependency>
-                  <groupId>org.apache.maven.scm</groupId>
-                  <artifactId>maven-scm-provider-gitexe</artifactId>
-                  <version>1.8.1</version>
-              </dependency>
-          </dependencies>
-      </plugin>
 		</plugins>
 	</build>
 
