--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.idyria.osi.wsb</groupId>
 	<artifactId>wsb-core</artifactId>
-	<version>3.1.0-SNAPSHOT</version>
+	<version>3.1.0</version>
 	<name>WSB Core</name>
 	<inceptionYear>2008</inceptionYear>
 	<parent>
@@ -36,7 +36,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-ooxoo-plugin</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -163,12 +163,12 @@
 		<dependency>
 			<groupId>com.idyria.osi.aib</groupId>
 			<artifactId>aib-core</artifactId>
-			<version>3.1.0-SNAPSHOT</version>
+			<version>3.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.idyria.osi.ooxoo</groupId>
 			<artifactId>ooxoo-core</artifactId>
-			<version>3.1.0-SNAPSHOT</version>
+			<version>3.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
