--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.idyria.osi</groupId>
 		<artifactId>superpom-scala</artifactId>
-		<version>2.11.2.r1</version>
+		<version>2.11.4.r1</version>
 	</parent>
 
 	<!-- SCM -->
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>com.idyria.osi.ooxoo</groupId>
 			<artifactId>ooxoo-core</artifactId>
-			<version>3.1.0</version>
+			<version>3.1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
