--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>org.odfi.ooxoo</groupId>
 			<artifactId>ooxoo-core</artifactId>
-			<version>3.2.0-SNAPSHOT</version>
+			<version>3.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
