--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -8,15 +8,15 @@
 	<parent>
 		<groupId>org.odfi</groupId>
 		<artifactId>superpom-scala</artifactId>
-		<version>2.12.1.r4</version>
+		<version>2.12.1.r7</version>
 	</parent>
 
 	<!-- SCM -->
 	<!-- ### -->
 	<scm>
-		<connection>scm:git:git://bitbucket.org/osi/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:git@bitbucket.org:osi/${project.artifactId}.git</developerConnection>
-		<url>http://bitbucket.org/osi/${project.artifactId}.git</url>
+		<connection>scm:git:git@github.com:richnou/wsb-core.git</connection>
+		<developerConnection>scm:git:git@github.com:richnou/wsb-core.git</developerConnection>
+		<url>https://github.com/richnou/wsb-core.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
