--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -24,7 +24,11 @@
     <!-- #### -->
     <properties>
         <github.global.server>github</github.global.server>
+        <ooxoo.version>3.2.3-SNAPSHOT</ooxoo.version>
     </properties>
+
+
+
 
 	<organization>
         <name>OSI / Computer Architecture Group @ Uni. Heidelberg </name>
@@ -36,7 +40,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-ooxoo-plugin</artifactId>
-				<version>3.2.3-SNAPSHOT</version>
+				<version>${ooxoo.version}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -101,30 +105,13 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>1.6</version>
+				<version>1.12</version>
 				<configuration>
 				  <licenseName>gpl_v3</licenseName>
 				  <extraExtensions>
 				    <scala>java</scala>
 				  </extraExtensions>
 				</configuration>
-			</plugin>
-			<!-- Site --> 
-			<plugin>
-			  <groupId>com.github.github</groupId>
-			  <artifactId>site-maven-plugin</artifactId>
-			  <version>0.8</version>
-			  <configuration>
-			    <message>Creating site for ${project.version}</message>
-			  </configuration>
-			  <executions>
-			    <execution>
-			      <goals>
-			        <goal>site</goal>
-			      </goals>
-			      <phase>site</phase>
-			    </execution>
-			  </executions>
 			</plugin>
 		</plugins>
 	</build>
