--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -1,14 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.odfi.wsb</groupId>
 	<artifactId>wsb-core</artifactId>
 	<version>3.4.0-SNAPSHOT</version>
 	<name>WSB Core</name>
-	<inceptionYear>2008</inceptionYear>
 	<parent>
 		<groupId>org.odfi</groupId>
 		<artifactId>superpom-scala</artifactId>
-		<version>2.12.2.r1</version>
+		<version>2.12.2.r17</version>
 	</parent>
 
 	<!-- SCM -->
@@ -20,23 +20,62 @@
 		<tag>HEAD</tag>
 	</scm>
 
-	<!-- Site -->
-    <!-- #### -->
-    <properties>
-        <github.global.server>github</github.global.server>
-        <ooxoo.version>3.2.3-SNAPSHOT</ooxoo.version>
-    </properties>
 
+	<inceptionYear>2008</inceptionYear>
 
+	<licenses>
+		<license>
+			<name>GNU Affero General Public License (AGPL) version 3.0</name>
+			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
+		</license>
+	</licenses>
 
+	<developers>
+		<developer>
+			<name>Richard Leys</name>
+			<email>leys.richard@gmail.com</email>
+		</developer>
+	</developers>
 
-	<organization>
-        <name>OSI / Computer Architecture Group @ Uni. Heidelberg </name>
-        <url>https://github.com/richnou/wsb-core</url>
-    </organization>
+	<properties>
+		<github.global.server>github</github.global.server>
+		<ooxoo.version>3.3.0-SNAPSHOT</ooxoo.version>
+	</properties>
+
 
 	<build>
 		<plugins>
+
+			<!-- Licenses -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>${license.plugin.version}</version>
+				<configuration>
+					<encoding>UTF8</encoding>
+					<licenseName>agpl_v3</licenseName>
+				</configuration>
+				<executions>
+					<execution>
+						<id>update-file-header</id>
+						<goals>
+							<goal>update-file-header</goal>
+						</goals>
+						<phase>process-sources</phase>
+						<configuration>
+							<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+							<dryRun>false</dryRun>
+							<roots>
+								<root>src/main/scala</root>
+								<root>src/test/scala</root>
+								<root>target/generated-sources</root>
+								<root>src/examples/scala</root>
+							</roots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-ooxoo-plugin</artifactId>
@@ -65,6 +104,7 @@
 							<sources>
 								<source>${project.build.directory}/generated-sources/scala</source>
 								<source>src/main/java</source>
+								<source>${basedir}/src/examples/scala</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -77,42 +117,14 @@
 							<sources>
 								<source>${project.build.directory}/generated-sources/scala</source>
 								<source>src/main/java</source>
+								<source>${basedir}/src/examples/scala</source>
 							</sources>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>net.alchim31.maven</groupId>
-				<artifactId>scala-maven-plugin</artifactId>
-				<configuration>
-					<addZincArgs>-no-color</addZincArgs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sourceDir>${basedir}/src/examples/scala</sourceDir>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- Licenses -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>license-maven-plugin</artifactId>
-				<version>1.12</version>
-				<configuration>
-				  <licenseName>gpl_v3</licenseName>
-				  <extraExtensions>
-				    <scala>java</scala>
-				  </extraExtensions>
-				</configuration>
-			</plugin>
+
+
 		</plugins>
 	</build>
 
@@ -158,8 +170,8 @@
 		</repository>
 		<repository>
 			<snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 			<id>odfi.snapshots</id>
 			<name>odfi-snapshot</name>
 			<url>http://www.opendesignflow.org/maven/repository/snapshots/</url>
