--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.odfi.wsb</groupId>
 	<artifactId>wsb-core</artifactId>
-	<version>3.4.0-SNAPSHOT</version>
+	<version>3.4.1-SNAPSHOT</version>
 	<name>WSB Core</name>
 	<parent>
 		<groupId>org.odfi</groupId>
 		<artifactId>superpom-scala</artifactId>
-		<version>2.12.2.r17</version>
+		<version>2.12.6.r1</version>
 	</parent>
 
 	<!-- SCM -->
@@ -39,7 +39,7 @@
 
 	<properties>
 		<github.global.server>github</github.global.server>
-		<ooxoo.version>3.3.0-SNAPSHOT</ooxoo.version>
+		<ooxoo.version>3.3.1-SNAPSHOT</ooxoo.version>
 	</properties>
 
 
@@ -91,7 +91,7 @@
 					<execution>
 						<phase>generate-sources</phase>
 						<goals>
-							<goal>generate-sources</goal>
+							<goal>generate</goal>
 						</goals>
 					</execution>
 				</executions>
